# Shuotu_ERP-Saas

./: .dockerignore  .gitignore  IMPLEMENTATION_COMPLETE.md  PDA登录功能-测试指南.md  PDA登录功能增强说明.md  README.md  TEMU发布商品.txt  TIKTOK发布商品api.txt  deploy-baota-docker.sh  deploy-docker.bat  deploy-ghcr.sh  deploy-production.bat  deploy-production.sh  docker-compose.baota.yml  docker-compose.ghcr.yml  docker-compose.infra.yml  docker-compose.prod.yml  docker-compose.yml  install-courier-report.bat  install-pda-login-enhancement.bat  package-lock.json  package.json  reset-infra.bat  start-dev.bat  start-fullstack.bat  start-infra.bat  test-courier-report-api.bat  发货解决方案.txt  快递报单功能-README.md  快递报单功能-交付清单.md  快递报单功能-开发总结.md  快递报单功能安装说明.md  快递报单功能说明.md  服务启动状态.md
.claude/: settings.json  settings.local.json
PrintClientQt/: CMakeLists.txt  PrintClient.pro  README.md  build.bat  使用说明.md
PrintClientQt/src/: barcodegenerator.cpp  barcodegenerator.h  httpserver.cpp  httpserver.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  printservice.cpp  printservice.h  printtask.cpp  printtask.h
SHEIN_webhook文档/: SHEINwebhook说明文档.txt  SHEIN合作物流单下单通知.txt  SKU库存预警通知.txt  cte开票通知.txt  发货单变更通知.txt  商品上下架通知.txt  商品价格异常通知.txt  商品发布公文审核通知（全渠道）.txt  商品合规信息失败通知.txt  商品审核通知.txt  商品接收通知.txt  商品涨价审批通知.txt  商品额度变动通知.txt  店铺授权关系变更通知.txt  推送缺货需求库存数（新）.txt  示例,txt  订单同步通知.txt  退货单同步通知.txt  采购单通知.txt
docker/: .env.baota.example  .env.docker  .env.ghcr.example  .env.production.example  admin-api.Dockerfile  admin-web.Dockerfile  gateway.Dockerfile  migrator.Dockerfile  misc.Dockerfile  oms.Dockerfile  (+6 more)
(+400 files in other folders)
